--- a/cvibuild.spectrumGrabber/Debug/resources.in.rc
+++ b/cvibuild.spectrumGrabber/Debug/resources.in.rc
@@ -20,13 +20,13 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "\0"
+            VALUE "CompanyName", "Univeristy of Notre Dame\0"
             VALUE "FileDescription", "spectrumGrabber (Debug x86)\0"
             VALUE "FileVersion", "1.0\0"
             VALUE "InternalName", "spectrumGrabber\0"
-            VALUE "LegalCopyright", "Copyright ©  2017\0"
+            VALUE "LegalCopyright", "Copyright © Univeristy of Notre Dame 2017\0"
             VALUE "OriginalFilename", "spectrumGrabber.exe\0"
-            VALUE "ProductName", " spectrumGrabber\0"
+            VALUE "ProductName", "Univeristy of Notre Dame spectrumGrabber\0"
             VALUE "ProductVersion", "1.0\0"
         END
     END
