--- a/cvibuild.spectrumGrabber/Debug/resources.in.rc
+++ b/cvibuild.spectrumGrabber/Debug/resources.in.rc
@@ -1,6 +1,6 @@
-#include "C:\Program Files (x86)\National Instruments\Shared\MSDTRedistributables\SDKHeaderFiles\8.1\winver.h"
+#include "c:\program files (x86)\national instruments\cvi2013\sdk\include\winver.h"
 
-2 ICON "c:\\program files (x86)\\national instruments\\cvi2015\\bin\\default.ico"
+2 ICON "c:\\program files (x86)\\national instruments\\cvi2013\\bin\\default.ico"
 
 STRINGTABLE DISCARDABLE
 BEGIN
@@ -20,13 +20,13 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "Univeristy of Notre Dame\0"
+            VALUE "CompanyName", "University of Notre Dame\0"
             VALUE "FileDescription", "spectrumGrabber (Debug x86)\0"
             VALUE "FileVersion", "1.0\0"
             VALUE "InternalName", "spectrumGrabber\0"
-            VALUE "LegalCopyright", "Copyright © Univeristy of Notre Dame 2017\0"
+            VALUE "LegalCopyright", "Copyright © University of Notre Dame 2017\0"
             VALUE "OriginalFilename", "spectrumGrabber.exe\0"
-            VALUE "ProductName", "Univeristy of Notre Dame spectrumGrabber\0"
+            VALUE "ProductName", "University of Notre Dame spectrumGrabber\0"
             VALUE "ProductVersion", "1.0\0"
         END
     END
