--- a/cvibuild.spectrumGrabber/Debug/resources.in.rc
+++ b/cvibuild.spectrumGrabber/Debug/resources.in.rc
@@ -1,6 +1,8 @@
-#include "c:\program files (x86)\national instruments\cvi2013\sdk\include\winver.h"
+#include "C:\Program Files (x86)\National Instruments\Shared\MSDTRedistributables\SDKHeaderFiles\8.1\winver.h"
 
-2 ICON "c:\\program files (x86)\\national instruments\\cvi2013\\bin\\default.ico"
+2 ICON "c:\\Users\\user\\Desktop\\spectrumGrabber\\icon.ico"
+1 24 "c:\\Users\\user\\Desktop\\spectrumGrabber\\cvibuild.spectrumGrabber\\Debug\\manifest.xml"
+
 
 STRINGTABLE DISCARDABLE
 BEGIN
@@ -24,7 +26,7 @@ BEGIN
             VALUE "FileDescription", "spectrumGrabber (Debug x86)\0"
             VALUE "FileVersion", "1.0\0"
             VALUE "InternalName", "spectrumGrabber\0"
-            VALUE "LegalCopyright", "Copyright © University of Notre Dame 2017\0"
+            VALUE "LegalCopyright", "Copyright © University of Notre Dame 2019\0"
             VALUE "OriginalFilename", "spectrumGrabber.exe\0"
             VALUE "ProductName", "University of Notre Dame spectrumGrabber\0"
             VALUE "ProductVersion", "1.0\0"
