--- a/cvibuild.spectrumGrabber/Release/resources.in.rc
+++ b/cvibuild.spectrumGrabber/Release/resources.in.rc
@@ -1,6 +1,8 @@
 #include "C:\Program Files (x86)\National Instruments\Shared\MSDTRedistributables\SDKHeaderFiles\8.1\winver.h"
 
-2 ICON "c:\\program files (x86)\\national instruments\\cvi2015\\bin\\default.ico"
+2 ICON "c:\\Users\\user\\Desktop\\spectrumGrabber\\icon.ico"
+1 24 "c:\\Users\\user\\Desktop\\spectrumGrabber\\cvibuild.spectrumGrabber\\Release\\manifest.xml"
+
 
 STRINGTABLE DISCARDABLE
 BEGIN
@@ -20,13 +22,13 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "\0"
+            VALUE "CompanyName", "University of Notre Dame\0"
             VALUE "FileDescription", "spectrumGrabber (Release x86)\0"
             VALUE "FileVersion", "1.0\0"
             VALUE "InternalName", "spectrumGrabber\0"
-            VALUE "LegalCopyright", "Copyright   2017\0"
+            VALUE "LegalCopyright", "Copyright  University of Notre Dame 2019\0"
             VALUE "OriginalFilename", "spectrumGrabber.exe\0"
-            VALUE "ProductName", " spectrumGrabber\0"
+            VALUE "ProductName", "University of Notre Dame spectrumGrabber\0"
             VALUE "ProductVersion", "1.0\0"
         END
     END
